--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <h1> Test</h1>
-<p1> Test </p1>
+<p1>
+    Test 
+    <video width="320" height="240" controls>
+        <source src="marvel intro.mp4" type="video/mp4">
+    </video>
+</p1>
