--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<h1> Test</h1>
-<p1>
-    Test 
+<!DOCTYPE html>
+<html>
+<body>
+
     <video width="320" height="240" controls>
         <source src="marvel intro.mp4" type="video/mp4">
+       
     </video>
-</p1>
+
+</body>
+</html>
