--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 
-    <iframe width="420" height="315"
-            src="https://youtu.be/huxX0DmElNU?t=58">
-    </iframe>
-    <video width="320" height="240" controls>
+  
+    <video
+           class="center"
+           width="1080" height="1920" controls>
         <source src="src/marvel.mp4" type="video/mp4">
      
     </video>
