--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-  
-    <video
-           class="center"
-           width="1080" height="1920" controls>
+    <video class="center" width="1080" height="1920" controls>
         <source src="src/marvel.mp4" type="video/mp4">
-     
     </video>
 </body>
 </html>
