--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <video class="center" width="1080" height="1920" controls>
-        <source src="src/marvel.mp4" type="video/mp4">
-    </video>
+    <div>
+       
+        <video style="display:block; margin: 0 auto;" width="1280" height="720" controls>
+            <source src="src/marvel.mp4" type="video/mp4">
+        </video>
+    </div>
 </body>
 </html>
