--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <source src="src/marvel.mp4" type="video/mp4">
         </video>
         <iframe 
+                style="display:block; margin: 0 auto;"
                 width="1280" height="720" src="https://www.youtube.com/embed/huxX0DmElNU?t=58" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 
         </iframe>
