--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <div>
 
-        <video style="display:block; margin: 0 auto;" width="1280" height="720" controls loop playsinline>
+        <video style="display:block; margin: 0 auto;" width="1280" height="720" autoplay loop playsinline>
             <source src="src/marvel.mp4" type="video/mp4">
         </video>
         <iframe 
