--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <div>
+<head>
+    <title>HUVNY's Blog</title>
+</head>
+    <body>
+        <div>
+            <section id="banner">
+                <div class="inner">
+                    <h1>Huvny</h1>
+                    <p>
+                        I am planing...<br />
+                    </p>
+                </div>
+                <video style="display:block; margin: 0 auto;" width="1280" height="720" autoplay loop playsinline>
+                    <source src="src/marvel.mp4" type="video/mp4">
+                </video>
+            </section>
+                <iframe style="display:block; margin: 0 auto ;"
+                        width="1280" height="720" src="https://www.youtube.com/embed/huxX0DmElNU?t=58" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
 
-        <video style="display:block; margin: 0 auto;" width="1280" height="720" autoplay loop playsinline>
-            <source src="src/marvel.mp4" type="video/mp4">
-        </video>
-        <iframe 
-                style="display:block; margin: 0 auto ;"
-                width="1280" height="720" src="https://www.youtube.com/embed/huxX0DmElNU?t=58" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-
-        </iframe>
-       
-    </div>
-</body>
+        </div>
+    </body>
 </html>
