--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
     <title>HUVNY's Blog</title>
@@ -24,3 +24,5 @@
 
 </body>
 </html>
+-->
+<h1>Heloooooo</h1>
